# 21Study_CMake

./: README.md
01-简单样例/: CMakeLists.txt  main.cc
02-同一目录下多个源文件/: CMakeLists.txt  main.cc  testFunc1.cc
03-不同目录下多个源文件/: CMakeLists.txt
03-不同目录下多个源文件/testFunc/: testFunc.cc
04-正规一点的组织结构/: CMakeLists.txt
04-正规一点的组织结构/include/: testFunc1.h
04-正规一点的组织结构/src/: CMakeLists.txt
05-动态库和静态库的编译控制/: CMakeLists.txt
05-动态库和静态库的编译控制/testFunc/: testFunc.h
06-对库进行链接/: CMakeLists.txt
06-对库进行链接/src/: main.cc
07-添加预编译项/: CMakeLists.txt  main.cc
08-添加控制选项/: CMakeLists.txt
08-添加控制选项/src/: CMakeLists.txt  main1.cc  main2.cc
09-使用宏添加控制选项/: CMakeLists.txt  main.cc
